# toolchains

./: .gitignore  README.md  build_gcc.md  build_llvm.md  pyproject.toml
doc/source/: conf.py  toolchains.rst
readme/: x86_64-linux-gnu-host-aarch64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-arm-linux-gnueabi-target-gcc.md  x86_64-linux-gnu-host-arm-linux-gnueabihf-target-gcc.md  x86_64-linux-gnu-host-arm-none-eabi-target-gcc.md  x86_64-linux-gnu-host-loongarch64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-loongarch64-loongnix-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-riscv64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-x86_64-elf-target-gcc.md  x86_64-linux-gnu-host-x86_64-ubuntu2004-linux-gnu-target-gcc.md  x86_64-linux-gnu-native-gcc.md  x86_64-w64-mingw32-host-aarch64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-arm-linux-gnueabi-target-gcc.md  x86_64-w64-mingw32-host-arm-linux-gnueabihf-target-gcc.md  x86_64-w64-mingw32-host-arm-none-eabi-target-gcc.md  x86_64-w64-mingw32-host-i686-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-i686-w64-mingw32-target-gcc.md  x86_64-w64-mingw32-host-loongarch64-loongnix-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-riscv64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-x86_64-elf-target-gcc.md  x86_64-w64-mingw32-host-x86_64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-native-gcc.md
script/: __init__.py  aarch64-libm.py  build_gcc.py  common.py  download.py  download_source.py  gcc_environment.py  llvm_environment.py  modifier.py  python_config.py  x86_64-libm.py
test/: dynamic-import-test.py  test_basic_configure.py  test_dry_run.py  test_dynamic_import.py  test_global_settings.py  test_triplet_field.py
test/dynamic_import_test/: dynamic-import-test.py
toolchains/: __init__.py  build_gcc.py  build_gcc_source.py  build_llvm.py  build_llvm_source.py  common.py  download.py  download_source.py  gcc_environment.py  llvm_environment.py  sysroot.py  x86_64_linux_gnu_clang.py  x86_64_w64_mingw32_native_gcc.py
wrapper/: build_gcc.py  download.py
xmake/: option.lua  rule.lua  toolchain.lua
xmake/utility/: target.lua  utility.lua
