[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "toolchains"
version = "0.1.0"
description = "Build GCC and LLVM toolchains automatically."
authors = [
    { name = "24bit-xjkp", email = "2283572185@qq.com" },
    { name = "Arendelle", email = "2381642961@qq.com" },
    { name = "situNagisa", email = "1300296933@qq.com" },
]
readme = "README.md"
license = "MIT"
requires-python = "^3.12.0"
dependencies = ["psutil>=5.9.0", "packaging>=21.0"]

[project.urls]
repository = "https://github.com/24bit-xjkp/toolchains"

[project.scripts]
toolchains-download = "toolchains.download:main"
toolchains-gcc = "toolchains.build_gcc:main"


[tool.poetry]
package-mode = true
packages = [{ include = "toolchains" }]
include = ["readme/*.md", "script/*", "xmake/*", "CONTRIBUTORS.md"]

[tool.black]
line-length = 140
skip-string-normalization = false
include = "(\\.pyi?|script/.gdbinit)$"
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.vscode
  | \.VSCodeCounter
  | \.xmake
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 140

[tool.mypy]
strict = true
pretty = true
files = ["script/*.py", "script/.gdbinit", "toolchains/*.py"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
mypy-extensions = "^1.0.0"
poetry = "^2.0.0"
black = "^24.10.0"
isort = "^5.13.2"
types-psutil = "^6.1.0.20241221"
